fix content-wrap

--- a/src/sass/layouts/_our-acttivity.scss
+++ b/src/sass/layouts/_our-acttivity.scss
@@ -7,6 +7,7 @@
   > .content-wrap {
     @include laptop {
       display: flex;
+      padding: 0;
     }
   }
   @include laptop {
